www/css/style.css
/* Empty. Add your own CSS if you like */
ion-side-menu  ion-content div.list ion-item,
ion-side-menu  ion-content div.list ion-item a.item-content{
	background: transparent;
    border: initial;
    color: #fff;
}
ion-side-menu  ion-content.stable-bg div.list ion-item,
ion-side-menu  ion-content.stable-bg div.list ion-item a.item-content,
ion-side-menu  ion-content.light-bg div.list ion-item,
ion-side-menu  ion-content.light-bg div.list ion-item a.item-content{
	color: #000;
}
.ionic .light, .ionic a.light, .ionic ion-item.light {
    color: #fff; }
  .ionic .light-bg {
    background-color: #fff; }
  .ionic .light-border {
    border-color: #ddd; }
  .ionic .stable, .ionic a.stable , .ionic  ion-item.stable{
    color: #f8f8f8; }
  .ionic .stable-bg {
    background-color: #f8f8f8; }
  .ionic .stable-border {
    border-color: #b2b2b2; }
  .ionic .positive, .ionic a.positive, .ionic  ion-item.light {
    color: #387ef5; }
  .ionic .positive-bg {
    background-color: #387ef5; }
  .ionic .positive-border {
    border-color: #0c60ee; }
  .ionic .calm, .ionic a.calm , .ionic  ion-item.calm{
    color: #11c1f3; }
  .ionic .calm-bg {
    background-color: #11c1f3; }
  .ionic .calm-border {
    border-color: #0a9dc7; }
  .ionic .assertive, .ionic a.assertive , .ionic  ion-item.assertive{
    color: #ef473a; }
  .ionic .assertive-bg {
    background-color: #ef473a; }
  .ionic .assertive-border {
    border-color: #e42112; }
  .ionic .balanced, .ionic a.balanced , .ionic  ion-item.balanced{
    color: #33cd5f; }
  .ionic .balanced-bg {
    background-color: #33cd5f; }
  .ionic .balanced-border {
    border-color: #28a54c; }
  .ionic .energized, .ionic a.energized, .ionic  ion-item.energized{
    color: #ffc900; }
  .ionic .energized-bg {
    background-color: #ffc900; }
  .ionic .energized-border {
    border-color: #e6b500; }
  .ionic .royal, .ionic a.royal, .ionic  ion-item.royal{
    color: #886aea; }
  .ionic .royal-bg {
    background-color: #886aea; }
  .ionic .royal-border {
    border-color: #6b46e5; }
  .ionic .dark, .ionic a.dark, .ionic  ion-item.dark{
    color: #444; }
  .ionic .dark-bg {
    background-color: #444; }
  .ionic .dark-border {
    border-color: #111; }
	
/* ionic layout issue fix */
.has-subheader{
	top: 44px;
	height: 90%;
}

